...
                    style="@style/textView_style"
                    android:textStyle="bold"
                    android:textSize="24sp">
                </TextView>

                <TextView
                    android:id="@+id/testResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    android:text="Login success"/>

            </LinearLayout>
            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
...
